HTML and CSS fixes

--- a/favorites.html
+++ b/favorites.html
@@ -68,7 +68,7 @@
         <dialog id="pokemon-modal" class="modal">
             <div class="modal-content">
                 <div class="division-1">
-                    <img id="modal-image" src="" alt="Pokemon Image" />
+                    <img id="modal-image" src="images/no-image.avif" alt="Pokemon Image" />
                     <div>
                         <h2 id="modal-title"></h2>
                         <p id="modal-types"></p>
