--- a/compare.html
+++ b/compare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Use this page to compare two Pokémon side by side. It shows their stats, types, and other info to help you see which one is stronger or better for a battle.">
     <meta name="author" content="David da Rocha Fernandes">
 
     <title>PokeIndex</title>
