--- a/pokemon.html
+++ b/pokemon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Here you can explore a list of all Pokémon, with their images, types, and basic stats. You can click on any of them to see more details in a modal.">
     <meta name="author" content="David da Rocha Fernandes">
 
     <title>PokeIndex - Pokemons</title>
