--- a/trivia.html
+++ b/trivia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Test your knowledge with Pokémon trivia questions! Choose how many questions you want and see your score at the end.">
     <meta name="author" content="David da Rocha Fernandes">
 
     <title>PokeIndex</title>
