--- a/favorites.html
+++ b/favorites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="This page shows all the Pokémon you've marked as favorites. You can view more info about each one or remove them from the list if you change your mind.">
     <meta name="author" content="David da Rocha Fernandes">
 
     <title>PokeIndex - Pokemons</title>
