--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Home">
+    <meta name="description" content="This is the homepage of PokeIndex, where you can search for any Pokémon by name and see some random options in the feature. Autocomplete helps you find them faster.">
     <meta name="author" content="David da Rocha Fernandes">
 
     <title>PokeIndex</title>
